cmake_minimum_required(VERSION 3.10)

project(AttractionManagement)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_C_COMPILER gcc)
set(CMAKE_CXX_COMPILER g++)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})

include_directories(${PROJECT_SOURCE_DIR}/include)

file(GLOB COMMON_SOURCES 
    "${PROJECT_SOURCE_DIR}/src/graph.cpp"
    "${PROJECT_SOURCE_DIR}/src/tourism.cpp"
)

add_executable(run_cli 
    ${COMMON_SOURCES}
    "${PROJECT_SOURCE_DIR}/src/Main_CLI.cpp"
)
